--- a/index.html
+++ b/index.html
@@ -3,111 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stunning Background Page</title>
+    <title>Pure Background with Scroll-Triggered Text</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-        body {
+        body, html {
             margin: 0;
             padding: 0;
             font-family: 'Poppins', sans-serif;
-            background: url('https://assets.onecompiler.app/43etahknn/43ey8gb7c/1000022040.jpg') no-repeat center center fixed;
-            background-size: cover;
-            height: 100vh;
-            color: #fff;
+            height: 100%;
             overflow-x: hidden;
-            animation: fadeIn 1.5s ease-in-out;
         }
 
-        .overlay {
-            position: absolute;
+        /* Fullscreen Fixed Background */
+        .background {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4);
-            z-index: 0;
+            background: url('https://assets.onecompiler.app/43etahknn/43ey8gb7c/1000022040.jpg') no-repeat center center;
+            background-size: cover;
+            z-index: -1;
         }
 
+        /* Hidden Content Initially */
         .content {
-            position: relative;
-            z-index: 1;
+            position: absolute;
+            top: 100vh; /* Starts below the viewport */
+            left: 0;
+            width: 100%;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+            transition: opacity 1.5s ease;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .text-box {
             max-width: 800px;
-            margin: 0 auto;
-            padding: 40px;
             text-align: center;
-            animation: slideUp 1s ease-out;
+            color: white;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 40px;
+            border-radius: 15px;
+            backdrop-filter: blur(5px);
         }
 
         h1 {
-            font-size: 3.5rem;
+            font-size: 3rem;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         p {
             font-size: 1.2rem;
             line-height: 1.6;
-            margin-bottom: 30px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         }
 
-        .btn {
-            display: inline-block;
-            padding: 12px 30px;
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.3);
+        /* Scroll Indicator (Optional) */
+        .scroll-hint {
+            position: fixed;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
             color: white;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: 600;
-            transition: all 0.3s ease;
+            font-size: 1.5rem;
+            opacity: 0.7;
+            animation: bounce 2s infinite;
         }
 
-        .btn:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0) translateX(-50%); }
+            40% { transform: translateY(-20px) translateX(-50%); }
+            60% { transform: translateY(-10px) translateX(-50%); }
         }
 
-        /* Animations */
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @keyframes slideUp {
-            from { 
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            to { 
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Responsive adjustments */
+        /* Responsive Adjustments */
         @media (max-width: 768px) {
-            h1 {
-                font-size: 2.5rem;
-            }
-            p {
-                font-size: 1rem;
-            }
-            .content {
-                padding: 20px;
-            }
+            h1 { font-size: 2rem; }
+            p { font-size: 1rem; }
+            .text-box { padding: 20px; }
         }
     </style>
 </head>
 <body>
-    <div class="overlay"></div>
+    <!-- Fullscreen Background (Only visible at first) -->
+    <div class="background"></div>
+
+    <!-- Optional Scroll Hint (Arrow) -->
+    <div class="scroll-hint">↓</div>
+
+    <!-- Hidden Content (Appears on scroll) -->
     <div class="content">
-        <h1>Welcome to a Beautiful Experience</h1>
-        <p>This stunning background creates a mesmerizing atmosphere. The design is clean, modern, and fully responsive, ensuring it looks amazing on all devices.</p>
-        <a href="#" class="btn">Explore More</a>
+        <div class="text-box">
+            <h1>Welcome to the Journey</h1>
+            <p>This text only appears after you scroll down. The background remains undisturbed until then.</p>
+        </div>
     </div>
+
+    <!-- JavaScript to Trigger Fade-In on Scroll -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const content = document.querySelector('.content');
+            const scrollHint = document.querySelector('.scroll-hint');
+
+            // Fade in content when scrolling
+            window.addEventListener('scroll', () => {
+                const scrollPosition = window.scrollY;
+                if (scrollPosition > 50) { // Adjust threshold as needed
+                    content.style.opacity = '1';
+                    scrollHint.style.display = 'none'; // Hide hint after scrolling
+                } else {
+                    content.style.opacity = '0';
+                }
+            });
+        });
+    </script>
 </body>
 </html>
