--- a/index.html
+++ b/index.html
@@ -1,126 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pure Background with Scroll-Triggered Text</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Animated Sections</title>
 
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: 'Poppins', sans-serif;
-            height: 100%;
-            overflow-x: hidden;
-        }
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
 
-        /* Fullscreen Fixed Background */
-        .background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('https://assets.onecompiler.app/43etahknn/43ey8gb7c/1000022040.jpg') no-repeat center center;
-            background-size: cover;
-            z-index: -1;
-        }
+  <!-- GSAP CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Observer.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/SplitText.min.js"></script>
 
-        /* Hidden Content Initially */
-        .content {
-            position: absolute;
-            top: 100vh; /* Starts below the viewport */
-            left: 0;
-            width: 100%;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            opacity: 0;
-            transition: opacity 1.5s ease;
-            padding: 20px;
-            box-sizing: border-box;
-        }
+  <style>
+    * {
+      box-sizing: border-box;
+      user-select: none;
+    }
 
-        .text-box {
-            max-width: 800px;
-            text-align: center;
-            color: white;
-            background: rgba(0, 0, 0, 0.6);
-            padding: 40px;
-            border-radius: 15px;
-            backdrop-filter: blur(5px);
-        }
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
 
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-        }
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      color: white;
+      background: black;
+      font-family: "Cormorant Garamond", serif;
+      text-transform: uppercase;
+    }
 
-        p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-        }
+    h2 {
+      font-size: clamp(1rem, 5vw, 5rem);
+      font-weight: 400;
+      text-align: center;
+      letter-spacing: 0.5em;
+      margin-right: -0.5em;
+      color: hsl(0, 0%, 80%);
+      width: 90vw;
+      max-width: 1200px;
+    }
 
-        /* Scroll Indicator (Optional) */
-        .scroll-hint {
-            position: fixed;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: white;
-            font-size: 1.5rem;
-            opacity: 0.7;
-            animation: bounce 2s infinite;
-        }
+    header {
+      position: fixed;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 5%;
+      width: 100%;
+      z-index: 3;
+      height: 7em;
+      font-family: "Bebas Neue", sans-serif;
+      font-size: clamp(0.66rem, 2vw, 1rem);
+      letter-spacing: 0.5em;
+    }
 
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateY(0) translateX(-50%); }
-            40% { transform: translateY(-20px) translateX(-50%); }
-            60% { transform: translateY(-10px) translateX(-50%); }
-        }
+    section {
+      height: 100%;
+      width: 100%;
+      top: 0;
+      position: fixed;
+      visibility: hidden;
+    }
 
-        /* Responsive Adjustments */
-        @media (max-width: 768px) {
-            h1 { font-size: 2rem; }
-            p { font-size: 1rem; }
-            .text-box { padding: 20px; }
-        }
-    </style>
+    section .outer,
+    section .inner {
+      width: 100%;
+      height: 100%;
+      overflow-y: hidden;
+    }
+
+    section .bg {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      background-size: cover;
+      background-position: center;
+    }
+
+    section .bg h2 {
+      z-index: 2;
+    }
+
+    section .bg .clip-text {
+      overflow: hidden;
+    }
+
+    .first .bg {
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 100%),
+        url("https://images.unsplash.com/photo-1617478755490-e21232a5eeaf?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxNzU1NjM5NA&ixlib=rb-1.2.1&q=75&w=1920");
+    }
+
+    .second .bg {
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 100%),
+        url("https://images.unsplash.com/photo-1617128734662-66da6c1d3505?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxNzc3NTM3MA&ixlib=rb-1.2.1&q=75&w=1920");
+    }
+
+    .third .bg {
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 100%),
+        url("https://images.unsplash.com/photo-1617438817509-70e91ad264a5?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxNzU2MDk4Mg&ixlib=rb-1.2.1&q=75&w=1920");
+    }
+
+    .fourth .bg {
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 100%),
+        url("https://images.unsplash.com/photo-1617412327653-c29093585207?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxNzU2MDgzMQ&ixlib=rb-1.2.1&q=75&w=1920");
+    }
+
+    .fifth .bg {
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 100%),
+        url("https://images.unsplash.com/photo-1617141636403-f511e2d5dc17?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxODAzMjc4Mw&ixlib=rb-1.2.1&q=75w=1920");
+      background-position: 50% 45%;
+    }
+
+    h2 * {
+      will-change: transform;
+    }
+  </style>
 </head>
 <body>
-    <!-- Fullscreen Background (Only visible at first) -->
-    <div class="background"></div>
 
-    <!-- Optional Scroll Hint (Arrow) -->
-    <div class="scroll-hint">↓</div>
+  <header>
+    <div>Animated Sections</div>
+    <div><a href="https://codepen.io/BrianCross/pen/PoWapLP">Original By Brian</a></div>
+  </header>
 
-    <!-- Hidden Content (Appears on scroll) -->
-    <div class="content">
-        <div class="text-box">
-            <h1>Welcome to the Journey</h1>
-            <p>This text only appears after you scroll down. The background remains undisturbed until then.</p>
+  <section class="first">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg one">
+          <h2 class="section-heading">Scroll down</h2>
         </div>
+      </div>
     </div>
+  </section>
 
-    <!-- JavaScript to Trigger Fade-In on Scroll -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const content = document.querySelector('.content');
-            const scrollHint = document.querySelector('.scroll-hint');
+  <section class="second">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">Animated with GSAP</h2>
+        </div>
+      </div>
+    </div>
+  </section>
 
-            // Fade in content when scrolling
-            window.addEventListener('scroll', () => {
-                const scrollPosition = window.scrollY;
-                if (scrollPosition > 50) { // Adjust threshold as needed
-                    content.style.opacity = '1';
-                    scrollHint.style.display = 'none'; // Hide hint after scrolling
-                } else {
-                    content.style.opacity = '0';
-                }
-            });
-        });
-    </script>
+  <section class="third">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">GreenSock</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="fourth">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">Animation platform</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="fifth">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">Keep scrolling</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script>
+    gsap.registerPlugin(Observer);
+
+    let sections = document.querySelectorAll("section"),
+      images = document.querySelectorAll(".bg"),
+      headings = gsap.utils.toArray(".section-heading"),
+      outerWrappers = gsap.utils.toArray(".outer"),
+      innerWrappers = gsap.utils.toArray(".inner"),
+      splitHeadings = headings.map(heading => new SplitText(heading, { type: "chars,words,lines", linesClass: "clip-text" })),
+      currentIndex = -1,
+      wrap = gsap.utils.wrap(0, sections.length),
+      animating;
+
+    gsap.set(outerWrappers, { yPercent: 100 });
+    gsap.set(innerWrappers, { yPercent: -100 });
+
+    function gotoSection(index, direction) {
+      index = wrap(index); 
+      animating = true;
+      let fromTop = direction === -1,
+          dFactor = fromTop ? -1 : 1,
+          tl = gsap.timeline({
+            defaults: { duration: 1.25, ease: "power1.inOut" },
+            onComplete: () => animating = false
+          });
+      if (currentIndex >= 0) {
+        gsap.set(sections[currentIndex], { zIndex: 0 });
+        tl.to(images[currentIndex], { yPercent: -15 * dFactor })
+          .set(sections[currentIndex], { autoAlpha: 0 });
+      }
+      gsap.set(sections[index], { autoAlpha: 1, zIndex: 1 });
+      tl.fromTo([outerWrappers[index], innerWrappers[index]], {
+          yPercent: i => i ? -100 * dFactor : 100 * dFactor
+        }, {
+          yPercent: 0
+        }, 0)
+        .fromTo(images[index], { yPercent: 15 * dFactor }, { yPercent: 0 }, 0)
+        .fromTo(splitHeadings[index].chars, {
+          autoAlpha: 0,
+          yPercent: 150 * dFactor
+        }, {
+          autoAlpha: 1,
+          yPercent: 0,
+          duration: 1,
+          ease: "power2",
+          stagger: {
+            each: 0.02,
+            from: "random"
+          }
+        }, 0.2);
+
+      currentIndex = index;
+    }
+
+    Observer.create({
+      type: "wheel,touch,pointer",
+      wheelSpeed: -1,
+      onDown: () => !animating && gotoSection(currentIndex - 1, -1),
+      onUp: () => !animating && gotoSection(currentIndex + 1, 1),
+      tolerance: 10,
+      preventDefault: true
+    });
+
+    gotoSection(0, 1);
+  </script>
 </body>
 </html>
