--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <header>
   <div>Animated Sections</div>
   <div><a href="https://codepen.io/BrianCross/pen/PoWapLP">Original By Brian</a></div>
+  <link rel="stylesheet" href="style.css">
 </header>
 <section class="first">
   <div class="outer">
