--- a/index.html
+++ b/index.html
@@ -1,51 +1,49 @@
-<header>
-  <div>Animated Sections</div>
-  <div><a href="https://codepen.io/BrianCross/pen/PoWapLP">Original By Brian</a></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Animated Sections</title>
+  
+  <!-- Correct place to link your CSS -->
   <link rel="stylesheet" href="style.css">
-</header>
-<section class="first">
-  <div class="outer">
-    <div class="inner">
-      <div class="bg one">
-        <h2 class="section-heading">Scroll down</h2>
-      </div>
-    </div>
-  </div>
 
-</section>
-<section class="second">
-  <div class="outer">
-    <div class="inner">
-      <div class="bg">
-        <h2 class="section-heading">Animated with GSAP</h2>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="third">
-  <div class="outer">
-    <div class="inner">
-      <div class="bg">
-        <h2 class="section-heading">GreenSock</h2>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="fourth">
-  <div class="outer">
-    <div class="inner">
-      <div class="bg">
-        <h2 class="section-heading">Animation platform</h2>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="fifth">
-  <div class="outer">
-    <div class="inner">
-      <div class="bg">
-        <h2 class="section-heading">Keep scrolling</h2>
-      </div>
-    </div>
-  </div>
-</section>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+
+  <!-- GSAP and plugins -->
+  <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/SplitText.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/Observer.min.js"></script>
+</head>
+<body>
+
+  <!-- Your header and sections -->
+  <header>
+    <div>Animated Sections</div>
+    <div><a href="https://codepen.io/BrianCross/pen/PoWapLP">Original By Brian</a></div>
+  </header>
+
+  <!-- Sections go here -->
+  <section class="first">
+    <!-- ... -->
+  </section>
+  <section class="second">
+    <!-- ... -->
+  </section>
+  <section class="third">
+    <!-- ... -->
+  </section>
+  <section class="fourth">
+    <!-- ... -->
+  </section>
+  <section class="fifth">
+    <!-- ... -->
+  </section>
+
+  <!-- Link to your JS file at the end of the body -->
+  <script src="script.js"></script>
+</body>
+</html>
