--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         /* Custom styles for the body */
         body {
             /* Set the initial background image */
+            <img src="glg.gif" alt="Animated globe" width="200" height="150">
+
             background-image: url('https://assets.onecompiler.app/43etahknn/43ey8gb7c/1000022040.jpg');
             background-size: cover;
             background-position: center;
